--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Gasoek+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&family=Doto:wght@100..900&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Double:wght@100..900&display=swap" rel="stylesheet">
   <!-- Swiper CDN -->
-
 
 
   <link rel="stylesheet" href="css/portfolioby__6xxnnk.css" />
@@ -23,7 +22,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-<!--   <script>document.addEventListener('contextmenu', e => e.preventDefault());</script> -->
+<!-- <script>document.addEventListener('contextmenu', e => e.preventDefault());</script> -->
 </head>
 <body>
   <div class="wrap">
@@ -772,9 +771,15 @@ Telling brand stories through visual moods.</div>
 </div>
 
   <div class="footer-inner">
-    <h2 id="contactTitle" class="contact__title contact__title--final">
-      small details, big stories.
-    </h2>
+    <h2 id="contactTitle" class="contact__title contact__title--final" aria-label="small details, big stories.">
+  <span class="ch c1">s</span><span class="ch c2">m</span><span class="ch c3">a</span><span class="ch c4">l</span><span class="ch c5">l</span>
+  <span class="sp">&nbsp;</span>
+  <span class="ch c6">d</span><span class="ch c7">e</span><span class="ch c8">t</span><span class="ch c9">a</span><span class="ch c1">i</span><span class="ch c2">l</span><span class="ch c3">s</span><span class="ch c4">,</span>
+  <span class="sp">&nbsp;</span>
+  <span class="ch c5">b</span><span class="ch c6">i</span><span class="ch c7">g</span>
+  <span class="sp">&nbsp;</span>
+  <span class="ch c8">s</span><span class="ch c9">t</span><span class="ch c1">o</span><span class="ch c2">r</span><span class="ch c3">i</span><span class="ch c4">e</span><span class="ch c5">s</span><span class="ch c6">.</span>
+</h2>
     <p class="contact__subtitle">
       팀에 <span>실행력과 디테일</span>을 보탤
      <span> 주니어 크리에이터 '조윤경' </span>입니다.
@@ -790,11 +795,13 @@ Telling brand stories through visual moods.</div>
     <!-- 핵심 액션 칩들 -->
     <nav class="chips" aria-label="연락/자료 링크">
       <!-- Email -->
-      <a class="chip chip--ghost" href="mailto:wholovesthesun@naver.com">
+      <a class="chip chip--ghost"href="https://mail.naver.com/write?to=wholovesthesun@naver.com&subject=%EC%A1%B0%EC%9C%A4%EA%B2%BD%20%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4%20%EB%AC%B8%EC%9D%98&body=%EC%95%88%EB%85%95%ED%95%98%EC%84%B8%EC%9A%94%2C%0D%0A%EC%A1%B0%EC%9C%A4%EA%B2%BD%20%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%EB%A5%BC%20%EB%B3%B4%EA%B3%A0%20%EA%B4%80%EC%8B%AC%EC%9D%B4%20%EC%83%9D%EA%B2%BC%EC%96%B4%EC%9A%94.%0D%0A%EA%B4%80%EB%A0%A8%20%EC%82%AC%ED%95%AD%EC%97%90%20%EB%8C%80%ED%95%9C%20%EC%98%81%EB%AC%B8%20%EC%A7%88%EB%AC%B8%EC%9D%84%20%EB%B3%B4%EB%82%B4%EC%A3%BC%EC%8B%9C%EB%A9%B4%20%EA%B0%90%EC%82%AC%ED%95%A9%EB%8B%88%EB%8B%A4.%0D%0A%0D%0A---%0D%0AFrom:%20Yunkyung%20Cho"
+   target="_blank"
+   rel="noopener">
         <span class="chip__icon" aria-hidden="true">✉️</span>
         <span class="chip__label">Email</span>
         <span class="chip__meta">wholovesthesun@naver.com</span>
-      </a>
+      </href=>
 
 
       <!-- Portfolio PDF / Resume -->
@@ -852,6 +859,7 @@ Telling brand stories through visual moods.</div>
 
 
   <script src="js/collabs.js" defer></script>
+
 
 <!--   <script src="js/ball.js" defer></script> -->
 
