--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@
     <div class="phone-meta phone-meta--glossier g-card-meta">
       <h3>Glossier Mobile App</h3>
       <p class="meta-desc">
-        리브랜딩 무드에 맞춘 iOS 우선 설계 <br>
-        홈 → 상품 탐색 → 결제까지 핵심 플로우를 간결하게 연결 <br>
+        아이폰13,14 레이아웃<br>
+        홈 → 상품 탐색 → 결제까지 <strong>핵심 플로우를 간결하게 연결</strong> <br>
         <strong>디자인 시스템</strong>(타이포·그리드·토큰)과 <strong>모션</strong>으로 실제 앱 감도 강화
       </p>
 
