--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
       <div class="cm-frame">
         <span class="cm-notch"></span>
         <div class="cm-screen">
-          <img src="/img/29cm-HOME-.jpg" alt="29CM Home">
+          <img src="img/29cmhome.jpg" alt="29CM Home">
         </div>
         <span class="cm-bezel" aria-hidden="true"></span>
         <span class="cm-rim" aria-hidden="true"></span>
@@ -499,7 +499,7 @@
       <div class="cm-frame">
         <span class="cm-notch"></span>
         <div class="cm-screen">
-          <img src="/img/29CM-SHOP.jpg" alt="29CM Shop">
+          <img src="img/29cmshop.jpg" alt="29CM Shop">
         </div>
         <span class="cm-bezel" aria-hidden="true"></span>
         <span class="cm-rim" aria-hidden="true"></span>
@@ -511,7 +511,7 @@
       <div class="cm-frame">
         <span class="cm-notch"></span>
         <div class="cm-screen">
-          <img src="/img/29CM-DETAIL.jpg" alt="29CM Detail">
+          <img src="img/29cmdetail.jpg" alt="29CM Detail">
         </div>
         <span class="cm-bezel" aria-hidden="true"></span>
         <span class="cm-rim" aria-hidden="true"></span>
@@ -523,7 +523,7 @@
       <div class="cm-frame">
         <span class="cm-notch"></span>
         <div class="cm-screen">
-          <img src="/img/29CM-ORDER.jpg" alt="29CM Order">
+          <img src="img/29cmorder.jpg" alt="29CM Order">
         </div>
         <span class="cm-bezel" aria-hidden="true"></span>
         <span class="cm-rim" aria-hidden="true"></span>
