--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@ Telling brand stories through visual moods.</div>
   <script src="js/projects-devices.js" defer></script>
   <script src="js/tamburins.js" defer></script>
 
-  <script src="js/glossier.js"></script>
+  <script src="./js/zigzag.js"></script>
 
   <script src="js/zigzag.js" defer></script>
 
