--- a/index.html
+++ b/index.html
@@ -318,26 +318,26 @@
     <!-- 왼쪽: 2x2 썸네일 (각 버튼에 표시할 mock 이미지 경로를 data-mock에 명시) -->
     <div class="zz-left" id="zzThumbs">
       <button class="zz-thumb is-active" data-target="1" data-tooltip="click me!" aria-label="썸네일 1"
-              data-mock="img/zigzag-HOME-mockip.png">
-        <img src="img/zigzag-HOME.jpg" alt="">
+              data-mock="img/zigzag-homemockup.png">
+        <img src="img/zigzag-home.jpg" alt="">
         <span class="dot">1</span>
       </button>
 
       <button class="zz-thumb" data-target="2" data-tooltip="click me!" aria-label="썸네일 2"
-              data-mock="img/zigzag-PRODUCT-mockip.png">
-        <img src="img/zigzag-PRODUCT.jpg" alt="">
+              data-mock="img/zigzag-productmockup.png">
+        <img src="img/zigzag-product.jpg" alt="">
         <span class="dot">2</span>
       </button>
 
       <button class="zz-thumb" data-target="3" data-tooltip="click me!" aria-label="썸네일 3"
-              data-mock="img/zigzag-ORDER-mockip.png">
-        <img src="img/zigzag-ORDER.jpg" alt="">
+              data-mock="img/zigzag-ordermockup.png">
+        <img src="img/zigzag-order.jpg" alt="">
         <span class="dot">3</span>
       </button>
 
       <button class="zz-thumb" data-target="4" data-tooltip="click me!" aria-label="썸네일 4"
-              data-mock="img/zigzag-MYPAGE-mockip.png">
-        <img src="img/zigzag-MYPAGE.jpg" alt="">
+              data-mock="img/zigzag-mypagemockup.png">
+        <img src="img/zigzag-mypage.jpg" alt="">
         <span class="dot">4</span>
       </button>
     </div>
@@ -346,10 +346,10 @@
     <div class="zz-right" id="zzRight">
       <figure class="zz-stage" aria-live="polite">
         <!-- 초기 노출 이미지는 is-active 썸네일의 data-mock과 일치 -->
-        <img id="zzStageImg" src="img/zigzag-HOME-mockip.png" alt="" data-src="img/zigzag-HOME-mockip.png">
+        <img id="zzStageImg" src="img/zigzag-homemockup.png" alt="" data-src="img/zigzag-homemockip.png">
       </figure>
       <noscript>
-        <img src="img/zigzag-HOME-mockip.png" alt="">
+        <img src="img/zigzag-homemockup.png" alt="">
       </noscript>
     </div>
   </div>
@@ -369,7 +369,6 @@
     </div>
   </div>
 </section>
-
 
 <!--4. 29cm -->
 <section class="cm-section-29" id="cm29">
@@ -744,9 +743,7 @@ Telling brand stories through visual moods.</div>
   <script src="js/projects-devices.js" defer></script>
   <script src="js/tamburins.js" defer></script>
 
-  <script src="./js/zigzag.js"></script>
-
-  <script src="js/zigzag.js" defer></script>
+  <script src="./js/zigzag.js" defer></script>
 
   <script src="js/cm29-mockups.js" defer></script>
 
