스마트폰버전까지 완성

--- a/index.html
+++ b/index.html
@@ -427,7 +427,8 @@
   <div class="g-card-meta phone-meta zz-meta--zigzag">
     <h3>ZigZag App Renewal</h3>
     <p class="meta-desc">
-      탐색 → 상품 → 결제까지 핵심 플로우를 단축시킨 <strong>콘텐츠 중심 설계</strong>
+      탐색 → 상품 → 결제까지 핵심 플로우를 단축시킨 <br>
+      <strong>콘텐츠 중심 설계</strong>
     </p>
     <ul class="meta-bullets">
       <li>필터 구조 개선으로 <strong>탐색 효율 향상</strong></li>
@@ -702,15 +703,15 @@ Telling brand stories through visual moods.</div>
       브랜드를 ‘보는 법’을 새롭게 만듭니다.
     </h2>
 <p class="creator__desc">
-  리서치부터 연출·색감·카피까지,  
+  리서치부터 연출·카피까지,  
   한 장의 이미지로 캠페인을 완성합니다.<br><br>
-  현재 개인 프로젝트로 <strong> 브랜드 협업 콘텐츠</strong>를 제작 중입니다. <br>
+  현재 개인 프로젝트로 <strong> 브랜드 협업 콘텐츠</strong>를 제작 중입니다 <br>
   마뗑킴(Matinkim)·아비브(Abib)·키르시(Kirsh)·LMC·포터코리아(PORTER KOREA) 등  <br>
-  다양한 브랜드의 룩북과 시즌 무드를 분석해 <strong >제품 콘셉트에 맞는 비주얼 연출</strong>을 고민합니다.
+  다양한 브랜드의 룩북과 시즌 무드를 분석해 <strong >제품 콘셉트에 맞는 비주얼 연출</strong>을 기획하였고
   <br>
   <br>  
-  인스타그램 피드·스토리용 이미지와 영상 촬영, 후보정,  
-  그리고 <strong>콘텐츠 확산을 위한 문구·카피라이팅까지 전 과정</strong>을 직접 담당했습니다.
+  인스타그램 피드·스토리용 이미지와 영상 촬영, 후보정,  <br>
+  그리고 <strong>콘텐츠 확산을 위한 문구·카피라이팅까지 전 과정</strong>을 직접 담당했습니다
 </p>
 
 
@@ -748,7 +749,7 @@ Telling brand stories through visual moods.</div>
 </div></h2>
     <p class="contact__subtitle">
       팀에 <span>실행력과 디테일</span>을 보탤
-     <span> 주니어 크리에이터 '조윤경' </span>입니다.
+     <span> 주니어 크리에이터 '조윤경' </span>입니다
       
     </p>
   </div>
