--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
           <div class="window-content">
             <ul class="meta-bullets">
               <li><strong>Figma</strong> 디자인</li>
+              <li><strong>반응형 웹사이트</strong> 구현</li>
               <li><strong>UI/UX 플로우·디자인 시스템</strong> 구축</li>
               <li>브랜드 아이덴티티 강화 · 사용자 경험 개선</li>
             </ul>
