--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
             </ul>
 
             <div class="meta-actions">
-              <a class="meta-btn meta-btn--ghost" href="https://6xxnnk.github.io/index/" target="_blank" rel="noopener">홈페이지 보기 </a>
-              <!-- <a class="meta-btn meta-btn--ghost" href="https://example.com/nespresso-process" target="_blank" rel="noopener">작업과정 보기</a> -->
+              <a class="meta-btn" href="https://6xxnnk.github.io/index/" target="_blank" rel="noopener">홈페이지 보기 </a>
+              <a class="meta-btn meta-btn--ghost" href="img/조윤경_네스프레소.pdf" target="_blank" rel="noopener">작업과정 보기</a>
             </div>
           </div>
         </div>
